Describe your changes

--- a/Rehabsa-Fullsa-main/index.html
+++ b/Rehabsa-Fullsa-main/index.html
@@ -6,6 +6,8 @@
     <title>رحاب - بطاقات الولاء الرقمية</title>
     <meta name="description" content="نمّ عملك ببطاقات الولاء الرقمية. تميز واجذب الزوار لتحويلهم إلى عملاء مخلصين." />
     <meta name="author" content="رحاب" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#0f172a" />
 
     <!-- Google Fonts - Almarai ---->
     <link rel="preconnect" href="https://fonts.googleapis.com">
